--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,7 +34,7 @@
         <main class="px-3 text-content ">
             <h1 class=" text-heading">Welcome to Picnicpal Dhanbad</h1>
             <p class="lead description-text" >  <br> Discover the city's hidden gems through real traveler reviews.
-                 Your ultimate guide to exploring and experiencing every tourist spots in Dhanbad</p>
+                 Your ultimate guide to exploring and experiencing every tourist spots in Dhanbad.</p>
             <a href="/restaurants" class="btn btn-lg btn-secondary font-weight-bold border-white">View
                 Places</a>
         </main>
